# linear-regression-model-

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
linear_regression/: CMakeLists.txt  main.cpp  plot.cpp  plot.h
linear_regression/datasets/: song_data.csv
linear_regression/include/: data.h  linear_regression.h  plot.h
linear_regression/src/: data.cpp  linear_regression.cpp  main.cpp  plot.cpp
